<resources>
    <string name="app_name">QuranPlayer</string>
    <string name="quran">القران الكريم</string>
    <string name="title">سورة الفاتحة</string>
    <string name="testtext">بِسْمِ اللَّـهِ الرَّ‌حْمَـٰنِ الرَّ‌حِيمِ الْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ﴿2﴾الرَّحْمٰنِ الرَّحِيمِ﴿3﴾  مَالِكِ يَوْمِ الدِّينِ﴿4﴾إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ﴿5﴾  اهْدِنَا الصِّرَاطَ الْمُسْتَقِيمَ﴿6﴾صِرَاطَ الَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوبِ عَلَيْهِمْ وَلاَ الضَّالِّينَ﴿7﴾</string>
    <string name="play_audio">تشغيل القراءة الصوتية</string>
    <string name="current_time">00:05</string>
    <string name="total_time">03:07</string>
    <string name="imgdes">imgDes</string>
    <string name="choose_reader">اختر القارئ</string>
    <string name="Ammer">عامر الكاظمي</string>
    <string name="Mohammed">محمد صديق المنشاوي</string>
    <string name="Mahomood">محمود الحصيري</string>
</resources>