<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    app:layoutDescription="@xml/activity_main_scene">

    <TextView
        android:id="@+id/activityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:layout_marginEnd="@dimen/smallMargin"
        android:fontFamily="@font/ntaqat"
        android:gravity="center_horizontal"
        android:text="@string/quran"
        android:textColor="@color/adabZiaraColor"
        android:textSize="@dimen/headerFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottomViewHeight"
        android:layout_marginTop="@dimen/smallMargin"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityName">

        <TextView
            android:id="@+id/ayahTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:fontFamily="@font/the_sans_bold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.38" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/playerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:id="@+id/ziarahText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uthman"
            android:text="@string/testtext"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/ayah_font_size" />
    </ScrollView>

    <ScrollView
        android:id="@+id/readersList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/cod_grey_color">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/readerContainer"
                style="@style/ReaderContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/readerName"
                    style="@style/ReaderName"
                    android:text="محمد صديق المنشاوي"
                    android:textSize="@dimen/readerNameFontSize"
                    app:layout_constraintBottom_toBottomOf="@+id/readerImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/readerImg"
                    app:layout_constraintTop_toTopOf="@+id/readerImg" />

                <ImageView
                    android:id="@+id/readerImg"
                    style="@style/ReaderImage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                     />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/readerContainer1"
                style="@style/ReaderContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/readerContainer">

                <TextView
                    android:id="@+id/readerName1"
                    style="@style/ReaderName"
                    android:text="عامر الكاظمي"
                    app:layout_constraintBottom_toBottomOf="@+id/readerImg1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/readerImg1"
                    app:layout_constraintTop_toTopOf="@+id/readerImg1" />

                <ImageView
                    android:id="@+id/readerImg1"
                    style="@style/ReaderImage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:tint="@color/dim_gray"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/readerContainer2"
                style="@style/ReaderContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/readerContainer1">

                <TextView
                    android:id="@+id/readerName2"
                    style="@style/ReaderName"
                    android:text="محمود الحصيري "
                    app:layout_constraintBottom_toBottomOf="@+id/readerImg2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/readerImg2"
                    app:layout_constraintTop_toTopOf="@+id/readerImg2" />

                <ImageView
                    android:id="@+id/readerImg2"
                    style="@style/ReaderImage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                     />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerView"
        android:layout_width="0dp"
        android:layout_height="@dimen/playerViewHeight"
        android:background="@color/cod_grey_color"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="@dimen/xLargeMargin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/total_time"
            android:textColor="@color/whiteColor"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar" />

        <ImageView
            android:id="@+id/playStopImg"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottomViewHeight"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:layout_marginBottom="@dimen/smallMargin"
            android:contentDescription="@string/imgdes"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBar"
            app:layout_constraintWidth_percent="0.2"
            app:srcCompat="@drawable/playblue"
            app:tint="@color/dim_gray"/>

        <ImageView
            android:id="@+id/preImg"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_img_height"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/mediumMargin"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/imgdes"
            app:layout_constraintBottom_toBottomOf="@+id/playStopImg"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/playStopImg"
            app:layout_constraintTop_toTopOf="@+id/playStopImg"
            app:srcCompat="@drawable/backward"
            app:tint="@color/dim_gray"/>

        <ImageView
            android:id="@+id/nextImg"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_img_height"
            android:layout_marginStart="@dimen/mediumMargin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/imgdes"
            app:layout_constraintBottom_toBottomOf="@+id/playStopImg"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/playStopImg"
            app:layout_constraintTop_toTopOf="@+id/playStopImg"
            app:srcCompat="@drawable/forward"
            app:tint="@color/dim_gray"/>

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="@dimen/xLargeMargin"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/current_time"
            android:textColor="@color/whiteColor"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBar" />

        <ImageView
            android:id="@+id/muteImg"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_img_height"
            android:layout_marginEnd="@dimen/mediumMargin"
            android:contentDescription="@string/imgdes"
            app:layout_constraintBottom_toBottomOf="@+id/nextImg"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nextImg"
            app:srcCompat="@drawable/unmute"
            app:tint="@color/dim_gray"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:progressBackgroundTint="@color/dim_gray"
            android:progressBackgroundTintMode="add"
            android:progressTint="@color/blueColor"
            android:thumbTint="@color/narvikColor"
            app:layout_constraintEnd_toStartOf="@id/totalTime"
            app:layout_constraintStart_toEndOf="@id/currentTime"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/downloadImg"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_img_height"
            android:layout_marginStart="@dimen/mediumMargin"
            app:layout_constraintBottom_toBottomOf="@+id/preImg"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/preImg"
            app:srcCompat="@drawable/download"
            app:tint="@color/dim_gray"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomView"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottomViewHeight"
        android:background="@color/cod_grey_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/zoomIn"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_img_height"
            android:layout_marginStart="@dimen/mediumMargin"
            android:layout_marginTop="@dimen/largeMargin"
            android:layout_marginBottom="@dimen/largeMargin"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/zoom_in"
            app:tint="@color/dim_gray"/>

        <ImageView
            android:id="@+id/zoomOut"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_img_height"
            android:layout_marginStart="@dimen/mediumMargin"
            android:layout_marginTop="@dimen/largeMargin"
            android:layout_marginBottom="@dimen/largeMargin"
            android:contentDescription="@string/imgdes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/zoomIn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/zoom_out"
            app:tint="@color/dim_gray"/>

        <ImageView
            android:id="@+id/chooseReaderImg"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_img_height"
            android:layout_marginEnd="@dimen/mediumMargin"
            app:layout_constraintBottom_toBottomOf="@+id/zoomOut"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/zoomOut"
            app:srcCompat="@drawable/reader"
            app:tint="@color/dim_gray"/>

        <TextView
            android:id="@+id/chooseReader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/smallMargin"
            android:fontFamily="@font/the_sans_bold"
            android:text="@string/choose_reader"
            android:textColor="@color/dim_gray"
            app:layout_constraintBottom_toBottomOf="@+id/chooseReaderImg"
            app:layout_constraintEnd_toStartOf="@+id/chooseReaderImg"
            app:layout_constraintTop_toTopOf="@+id/chooseReaderImg" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playStopView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/cod_grey_color"
        app:layout_constraintBottom_toTopOf="@+id/readersList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/play_stop_view_bg">


            <ImageView
                android:id="@+id/playUpImg"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/play"
                app:tint="@color/dim_gray" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/the_sans_bold"
                android:text="@string/play_audio"
                app:layout_constraintBottom_toBottomOf="@+id/playUpImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/playUpImg"


                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>
